--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="slider padding-site">
@@ -12,12 +14,22 @@
                 <a href="#" class="logo">
                     <img src="img/logo.png" alt="logo">
                 </a>
-                <ul class="menu">
-                    <li><a class="active-link" href="#">HOME</a></li>
-                    <li><a href="#">PRODUCTS</a></li>
-                    <li><a href="#">HISTORY</a></li>
-                    <li><a href="#">SHOWROOM</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                <ul class="menu header-menu">
+                    <li>
+                        <a class="active-link" href="#">HOME</a>
+                    </li>
+                    <li>
+                        <a href="#">PRODUCTS</a>
+                    </li>
+                    <li>
+                        <a href="#">HISTORY</a>
+                    </li>
+                    <li>
+                        <a href="#">SHOWROOM</a>
+                    </li>
+                    <li>
+                        <a href="#">CONTACT</a>
+                    </li>
                 </ul>
             </div>
             <div class="header-text">
@@ -34,6 +46,17 @@
             </div>
         </div>
         <div class="padding-site">
+            <div class="justify">
+                <ul class="menu product-menu">
+                    <li>
+                        <a class="active-link" href="#">Featured</a>
+                    </li>
+                    <li>
+                        <a href="#">New</a>
+                    </li>
+                </ul>
+                <a href="#" class="explore-link">EXPLORE ALL ></a>
+            </div>
             <div class="product">
                 <div class="item">
                     <img src="img/product.jpg" alt="product">
@@ -43,7 +66,8 @@
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
                 </div>
-                <div class="item"><img src="img/product.jpg" alt="product">
+                <div class="item">
+                    <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
                         <a class="product-link" href="#">&gt;</a>
                         <h3>Fishnet Chair</h3>
@@ -70,4 +94,5 @@
         </div>
     </div>
 </body>
+
 </html>
