promo section added;

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="#" class="circle"></a>
             </div>
         </div>
-        <div class="padding-site">
+        <div class="section padding-site">
             <div class="justify">
                 <ul class="menu product-menu">
                     <li>
@@ -89,6 +89,26 @@
                         <h3>Fishnet Chair</h3>
                         <p>Seat and back with upholstery made of cold cure foam</p>
                     </div>
+                </div>
+            </div>
+        </div>
+        <div class="section justify">
+            <div class="promo-container">
+                <img src="img/promo-img.jpg" alt="red chair">
+                <div class="content">
+                    <h4>EXCLUSIVE</h4>
+                    <h2>Fishnet Chair</h2>
+                    <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
+                    <a class="button button-round" href="#">Order Us</a>
+                </div>
+            </div>
+            <div class="promo-container">
+                <img src="img/promo-img1.jpg" alt="woodden chair">
+                <div class="content">
+                    <h4>EXCLUSIVE</h4>
+                    <h2>Fishnet Chair</h2>
+                    <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
+                    <a class="button button-round" href="#">Order Us</a>
                 </div>
             </div>
         </div>
