trending products section added;

--- a/index.html
+++ b/index.html
@@ -62,32 +62,40 @@
                     <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
                         <a class="product-link" href="#">&gt;</a>
-                        <h3>Fishnet Chair</h3>
-                        <p>Seat and back with upholstery made of cold cure foam</p>
+                        <div class="item-content">
+                            <h3>Fishnet Chair</h3>
+                            <p>Seat and back with upholstery made of cold cure foam</p>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
                         <a class="product-link" href="#">&gt;</a>
-                        <h3>Fishnet Chair</h3>
-                        <p>Seat and back with upholstery made of cold cure foam</p>
+                        <div class="item-content">
+                            <h3>Fishnet Chair</h3>
+                            <p>Seat and back with upholstery made of cold cure foam</p>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
                         <a class="product-link" href="#">&gt;</a>
-                        <h3>Fishnet Chair 3</h3>
-                        <p>Seat and back with upholstery 111 made of cold cure foam</p>
+                        <div class="item-content">
+                            <h3>Fishnet Chair 3</h3>
+                            <p>Seat and back with upholstery 111 made of cold cure foam</p>
+                        </div>
                     </div>
                 </div>
                 <div class="item">
                     <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
                         <a class="product-link" href="#">&gt;</a>
-                        <h3>Fishnet Chair</h3>
-                        <p>Seat and back with upholstery made of cold cure foam</p>
+                        <div class="item-content">
+                            <h3>Fishnet Chair</h3>
+                            <p>Seat and back with upholstery made of cold cure foam</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -112,6 +120,21 @@
                 </div>
             </div>
         </div>
+        <div class="section padding-site">
+            <div class="justify">
+                <h1 class="text-title">Trending Products</h1>
+                <a href="#" class="explore-link">EXPLORE ALL ></a>
+            </div>
+            <div class="trending-container">
+                <img src="img/product-5.jpg" alt="lamp">
+                <img src="img/product-6.jpg" alt="lamp">
+                <img src="img/product-11.jpg" alt="lamp">
+                <img src="img/product-21.jpg" alt="lamp">
+                <img src="img/product-31.jpg" alt="lamp">
+                <img src="img/product-41.jpg" alt="lamp">
+            </div>
+        </div>
+        <div class="section"></div>
     </div>
 </body>
 
