--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="public/css/header.css">
+    <link rel="stylesheet" href="public/css/elements.css">
+    <link rel="stylesheet" href="public/css/components.css">
 </head>
 
 <body>
@@ -37,7 +40,7 @@
                 <h2>Fishnet Chair</h2>
                 <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
                     or highly polished chrome.</p>
-                <a href="#">Order Us</a>
+                <a class="button button-round" href="#">Order Us ></a>
             </div>
             <div class="pagination">
                 <a href="#" class="circle"></a>
@@ -61,7 +64,7 @@
                 <div class="item">
                     <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
-                        <a class="product-link" href="#">&gt;</a>
+                        <a class="button product-link" href="#">&gt;</a>
                         <div class="item-content">
                             <h3>Fishnet Chair</h3>
                             <p>Seat and back with upholstery made of cold cure foam</p>
@@ -71,7 +74,7 @@
                 <div class="item">
                     <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
-                        <a class="product-link" href="#">&gt;</a>
+                        <a class="button product-link" href="#">&gt;</a>
                         <div class="item-content">
                             <h3>Fishnet Chair</h3>
                             <p>Seat and back with upholstery made of cold cure foam</p>
@@ -81,7 +84,7 @@
                 <div class="item">
                     <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
-                        <a class="product-link" href="#">&gt;</a>
+                        <a class="button product-link" href="#">&gt;</a>
                         <div class="item-content">
                             <h3>Fishnet Chair 3</h3>
                             <p>Seat and back with upholstery 111 made of cold cure foam</p>
@@ -91,7 +94,7 @@
                 <div class="item">
                     <img src="img/product.jpg" alt="product">
                     <div class="product-hover">
-                        <a class="product-link" href="#">&gt;</a>
+                        <a class="button product-link" href="#">&gt;</a>
                         <div class="item-content">
                             <h3>Fishnet Chair</h3>
                             <p>Seat and back with upholstery made of cold cure foam</p>
@@ -107,7 +110,7 @@
                     <h4>EXCLUSIVE</h4>
                     <h2>Fishnet Chair</h2>
                     <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
-                    <a class="button button-round" href="#">Order Us</a>
+                    <a class="button button-round" href="#">Order Us ></a>
                 </div>
             </div>
             <div class="promo-container">
@@ -116,7 +119,7 @@
                     <h4>EXCLUSIVE</h4>
                     <h2>Fishnet Chair</h2>
                     <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt</p>
-                    <a class="button button-round" href="#">Order Us</a>
+                    <a class="button button-round" href="#">Order Us ></a>
                 </div>
             </div>
         </div>
