hover effects for trending products; separate css for hover effects;

--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Interior</title>
     <link rel="stylesheet" href="public/css/main.css">
-    <link rel="stylesheet" href="public/css/header.css">
-    <link rel="stylesheet" href="public/css/elements.css">
-    <link rel="stylesheet" href="public/css/components.css">
 </head>
 
 <body>
@@ -129,12 +126,12 @@
                 <a href="#" class="explore-link">EXPLORE ALL ></a>
             </div>
             <div class="trending-container">
-                <img src="img/product-5.jpg" alt="lamp">
-                <img src="img/product-6.jpg" alt="lamp">
-                <img src="img/product-11.jpg" alt="lamp">
-                <img src="img/product-21.jpg" alt="lamp">
-                <img src="img/product-31.jpg" alt="lamp">
-                <img src="img/product-41.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-5.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-6.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-11.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-21.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-31.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-41.jpg" alt="lamp">
             </div>
         </div>
         <div class="section"></div>
