--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="container">
-        <div class="slider padding-site">
+        <div class="slider padding-site" style="background-image: url('img/slider-img.jpg')">
             <div class="header">
                 <a href="#" class="logo">
                     <img src="img/logo.png" alt="logo">
@@ -32,7 +32,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="header-text">
+            <div class="slider-text">
                 <h4>TRENDING</h4>
                 <h2>Fishnet Chair</h2>
                 <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
@@ -134,7 +134,25 @@
                 <img class="pointer dim grow" src="img/product-41.jpg" alt="lamp">
             </div>
         </div>
-        <div class="section"></div>
+        <div class="section">
+            <div class="slider padding-site" style="background-image: url('img/slider-table.jpg')">
+                <div class="slider-text">
+                    <h4>TRENDING</h4>
+                    <h2>Fishnet Chair</h2>
+                    <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
+                        or highly polished chrome.</p>
+                    <a class="button button-round" href="#">Order Us ></a>
+                </div>
+                <div class="pagination">
+                    <a href="#" class="circle"></a>
+                    <a href="#" class="circle circle-active"></a>
+                    <a href="#" class="circle"></a>
+                </div>
+            </div>
+        </div>
+        <div class="section">
+            
+        </div>
     </div>
 </body>
 
