--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </ul>
             </div>
             <div class="slider-text">
-                <h4>TRENDING</h4>
-                <h2>Fishnet Chair</h2>
-                <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
+                <h4 class="green">TRENDING</h4>
+                <h2 class="dark">Fishnet Chair</h2>
+                <p class="grey">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
                     or highly polished chrome.</p>
                 <a class="button button-round" href="#">Order Us ></a>
             </div>
@@ -59,7 +59,7 @@
             </div>
             <div class="product">
                 <div class="item">
-                    <img src="img/product.jpg" alt="product">
+                    <img src="img/product-1-sm.jpg" alt="product">
                     <div class="product-hover">
                         <a class="button product-link" href="#">&gt;</a>
                         <div class="item-content">
@@ -69,7 +69,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/product.jpg" alt="product">
+                    <img src="img/product-2-sm.jpg" alt="product">
                     <div class="product-hover">
                         <a class="button product-link" href="#">&gt;</a>
                         <div class="item-content">
@@ -79,7 +79,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/product.jpg" alt="product">
+                    <img src="img/product-3-sm.jpg" alt="product">
                     <div class="product-hover">
                         <a class="button product-link" href="#">&gt;</a>
                         <div class="item-content">
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <img src="img/product.jpg" alt="product">
+                    <img src="img/product-4-sm.jpg" alt="product">
                     <div class="product-hover">
                         <a class="button product-link" href="#">&gt;</a>
                         <div class="item-content">
@@ -102,7 +102,7 @@
         </div>
         <div class="section justify">
             <div class="promo-container">
-                <img src="img/promo-img.jpg" alt="red chair">
+                <img src="img/product-11-promo.jpg" alt="red chair">
                 <div class="content">
                     <h4>EXCLUSIVE</h4>
                     <h2>Fishnet Chair</h2>
@@ -111,7 +111,7 @@
                 </div>
             </div>
             <div class="promo-container">
-                <img src="img/promo-img1.jpg" alt="woodden chair">
+                <img src="img/product-3-promo.jpg" alt="woodden chair">
                 <div class="content">
                     <h4>EXCLUSIVE</h4>
                     <h2>Fishnet Chair</h2>
@@ -126,20 +126,20 @@
                 <a href="#" class="explore-link">EXPLORE ALL ></a>
             </div>
             <div class="trending-container">
-                <img class="pointer dim grow" src="img/product-5.jpg" alt="lamp">
-                <img class="pointer dim grow" src="img/product-6.jpg" alt="lamp">
-                <img class="pointer dim grow" src="img/product-11.jpg" alt="lamp">
-                <img class="pointer dim grow" src="img/product-21.jpg" alt="lamp">
-                <img class="pointer dim grow" src="img/product-31.jpg" alt="lamp">
-                <img class="pointer dim grow" src="img/product-41.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-5-md.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-6-md.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-7-md.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-8-md.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-9-md.jpg" alt="lamp">
+                <img class="pointer dim grow" src="img/product-10-md.jpg" alt="lamp">
             </div>
         </div>
         <div class="section">
-            <div class="slider padding-site" style="background-image: url('img/slider-table.jpg')">
+            <div class="slider padding-site" style="background-image: url('img/product-12-slider.jpg')">
                 <div class="slider-text">
-                    <h4>TRENDING</h4>
-                    <h2>Fishnet Chair</h2>
-                    <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
+                    <h4 class="red">HOT DEAL</h4>
+                    <h2 class="dark">Fishnet Chair</h2>
+                    <p class="grey">Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black
                         or highly polished chrome.</p>
                     <a class="button button-round" href="#">Order Us ></a>
                 </div>
